# hiremesh

./: .gitignore  LICENSE  Makefile  README.md  hiremesh-plan.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3ff08e5c873b_m2_resumes_and_field_overrides.py  75afa9bfaebf_m3_candidate_jobs_and_stage_transitions.py  9384ac604c42_baseline_users.py  a9b9b6f3d3ac_m1_clients_jobs_candidates_notes_stage_.py  aa01_m4_candidate_embeddings_pgvector.py  bb02_m5_v_candidate_search_view.py  cc03_m6_audit_log.py  dd04_resume_extracted_text.py  ee05_candidate_created_by.py  ff06_user_client_id_and_resume_uploaded_by.py
backend/app/: cli.py  main.py
backend/app/api/: admin.py  ask.py  auth.py  candidates.py  clients.py  jobs.py  notes.py  pipeline.py  resumes.py  search.py  stages.py  users.py
backend/app/core/: config.py  db.py  deps.py  embeddings.py  llm.py  security.py  storage.py  vector_type.py  visibility.py
backend/app/models/: __init__.py  audit.py  candidate.py  client.py  embedding.py  job.py  note.py  pipeline.py  resume.py  stage_template.py  user.py
backend/app/schemas/: ask.py  auth.py  candidates.py  clients.py  (+6 more)
backend/tests/: conftest.py  test_admin_user_mgmt.py  test_ask_candidate.py  test_ask_pool.py  test_audit_log.py  test_auth.py  test_bulk_import.py  test_candidates.py  test_cli.py  test_client_role.py  test_clients_jobs.py  test_embeddings.py  test_notes.py  test_pipeline.py  test_qa_pool_query.py  test_reparse.py  test_resumes.py  test_search.py  test_stages.py  test_sticky_overrides.py
(+82 files in other folders)
